fic maven